SERVER-8263 Use member configs in local.slaves